fixed z-index problem with ads

--- a/wikia/releases/200809.1/skins/monaco/css/root.css
+++ b/wikia/releases/200809.1/skins/monaco/css/root.css
@@ -128,5 +128,8 @@ body.mainpage .HOME_TOP_RIGHT_BOXAD, body.mainpage .FAST_HOME2 {
 
 /* general ads styling */
 .wikia_ad {
+	z-index: 15;
+}
+#HOME_LEFT_SKYSCRAPER_1_load, #HOME_LEFT_SKYSCRAPER_2_load, #LEFT_SKYSCRAPER_1_load, #LEFT_SKYSCRAPER_2_load {
 	z-index: 20;
 }
